syntax = "proto3";

package rwitesh;

option go_package = "./pb";

service Authorization {
  rpc AuthorizeUser(AuthToken) returns (UserPayload){};
}

message AuthToken {
  string userToken = 1;
}

message UserPayload{
  string userEmail = 1;
}